--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,36 @@
-/* You can add global styles to this file, and also import other style files */
+@import "https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap";
+@import "https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto:wght@400;700;900&display=swap";
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+a {
+    text-decoration: none;
+}
+.wrapper {
+   width: 100%;
+   max-width: 1280px;
+   box-sizing: border-box;
+   margin: 0 auto;
+   padding: 0px 10px;
+
+}
+.container {
+	max-width: 1920px; 
+	width: 100%;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 55px 0;
+	clear: both;
+}
+.align-center {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+.bg-purple {
+    background-color: rgba(53, 22, 134, 1);
+}
